--- a/main/backend/capstone_project/chat/templates/chat/room.html
+++ b/main/backend/capstone_project/chat/templates/chat/room.html
@@ -13,10 +13,13 @@
 </body>
 
 <script>
-    var roomName = {{ room_name_json }};
+    // var roomName = {{ room_name_json }};
+    var roomName = "hello";
+    let token = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoyLCJ1c2VybmFtZSI6InRlc3QzIiwiZXhwIjoxNjE5NDE5MTg0LCJlbWFpbCI6ImFjZGFjZDY2QG5hdmVlci5jb20ifQ.lVf1FSXhykoFjM7PPZ8fFi6Iz6xnUZ9grsB8YxHYVPc";
+    document.cookie = 'authorization=' + token + ';' 
 
     var chatSocket = new WebSocket(
-        'ws://' + window.location.host +
+        'ws://' + "127.0.0.1:8000" +
         '/ws/chat/' + roomName + '/');
         
 
