DEV FE PhotoChoicer and CSS

--- a/main/frontend/src/App.css
+++ b/main/frontend/src/App.css
@@ -74,7 +74,8 @@ h1{
   font-weight: 300;
 }
 
-#link:link { color:#e73330ad ; 
+#link:link { 
+  color:#e73330ad ; 
   font-family: 'GmarketSansLight';
   font-style: normal;
   font-weight: 100;
