--- a/main/frontend/src/App.css
+++ b/main/frontend/src/App.css
@@ -225,3 +225,12 @@ input::placeholder{
 #tab{
   overflow-x: scroll;
 }
+
+#chatroom{
+  width: 100%;
+  height: 550px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border:  5px solid #bdc3c7;
+  border-radius: 12px;
+}
